<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context="beerbear.areas.MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Tittle"
        android:textSize="30dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:src="@drawable/circulo"
            android:id="@+id/imageView" />

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:src="@drawable/triangulo"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:src="@drawable/cuadrado"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:src="@drawable/cubo"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cir"
                android:id="@+id/rCirculo" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tri"
                android:layout_marginLeft="15dp"
                android:id="@+id/rTriangulo"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cua"
                android:id="@+id/rCuadrado"
                android:layout_marginLeft="10dp"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:id="@+id/rCubo"
                android:text="@string/cub"
                />
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opPerim"
                android:id="@+id/rPerim"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opArea"
                android:id="@+id/rArea"

                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rVolum"
                android:text="@string/opVol"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/radio"
                android:id="@+id/eRadio"
                android:inputType="numberDecimal"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/eLado"
                android:hint="@string/lado"
                android:inputType="numberDecimal"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/base"
                android:id="@+id/eBase"
                android:inputType="numberDecimal"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/alto"
                android:id="@+id/eAlt"
                android:inputType="numberDecimal"/>


        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textSize="30dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:id="@+id/eResult"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bCalc"
                android:background="@color/darkcyan"
                android:text="@string/calc"
                android:textColor="@color/whitesmoke"
                android:layout_marginTop="30dp"
                android:onClick="click"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bClear"
                android:text="@string/clear"
                android:background="@color/darkgray"
                android:onClick="click"/>


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tittle2"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="20dp"/>


</LinearLayout>
